# quickstarts

./: .env.sample  .gitignore  Dockerfile  HEADLESS_MODE.md  README.md  build_docker_image.py  dev-requirements.txt  extraction_cli.py  health_check.sh  pyproject.toml  run_computer_use.py  run_docker.py  run_headless.sh  run_headless_extractor.py
computer_use_demo/: docker-compose.yaml  headless_extractor.py  status_updater.py
headless_browser/: __init__.py  extraction_cli.py  headless_extractor.py  loop.py  status_updater.py  streamlit.py
headless_browser/tools/: groups.py
image/: entrypoint.sh  start_all.sh
shared/: anchorage_menu.txt  container_status.txt  debug_log.txt  example_com_text.txt  sharedexample_com20250320_screenshot.metadata.json
shared/example_com/: 20250321_screenshot.metadata.json  container_status.txt
